# mnist-pipeline-sample

./: LICENSE  README.md
mnist-gokart/: Dockerfile  README.md  main.py  pyproject.toml
mnist-gokart/mnist_gokart/: __init__.py
mnist-gokart/mnist_gokart/model/: mnist.py
mnist-gokart/mnist_gokart/utils/: template.py
mnist-gokart/test/unit_test/: test_mnist.py
mnist-luigi/: README.md  luigi.cfg  pyproject.toml
mnist-luigi/mnist_luigi/tasks/: data_fetcher.py  evaluation.py  preprocessing.py  training.py
mnist-prefect/: README.md  pyproject.toml
mnist-prefect/mnist_prefect/: sample.py
