[tool.poetry]
name = "mnist-prefect"
version = "0.1.0"
description = ""
authors = ["Takahashi Kanji <ka.takahashi@sansan.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.2"
joblib = "^1.0.1"
prefect = "^0.15.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
ipython = "^7.29.0"
prefect = {extras = ["viz"], version = "^0.15.9"}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
